fixed gaps mobile

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 }
 
 body{
-    padding-bottom: 80px;
+    padding-bottom: 70px;
 }
 
 header {
@@ -28,6 +28,8 @@ header {
 
 .header-img {
     align-self: center;
+    height: 32px;
+
 }
 
 header .content {
@@ -35,7 +37,7 @@ header .content {
 }
 
 .landing-img {
-    height: 45dvh;
+    height: 35dvh;
     width: 100%;
     object-fit: cover;
     object-position: 30% 25%;
@@ -43,7 +45,7 @@ header .content {
 }
 
 .landing-icon {
-    height: 140px;
+    height: 120px;
     position: absolute;
     top: 97.5%;
     left: 50%;
@@ -69,15 +71,21 @@ h1 {
     text-align: center;
 }
 
-.landing {
-    display: flex;
-    flex-direction: column;
-    gap: 80px;
-}
-
 .landing-section {
     padding-top: 16px;
-    padding-bottom: 16px;
+    padding-bottom: 36px;
+}
+
+.landing-section .content{
+    display: flex;
+    flex-direction: column;
+    gap: 62px;
+}
+
+section .content{
+    display: flex;
+    flex-direction: column;
+    gap: 18px
 }
 
 nav {
@@ -86,7 +94,7 @@ nav {
     left: 0;
 
     width: 100%;
-    height: 80px;
+    height: 70px;
     background-color:rgba(54, 53, 52, 1);
 
     display: flex;
@@ -159,12 +167,6 @@ footer{
     padding: 2px 8px;
 }
 
-section .content{
-    display: flex;
-    flex-direction: column;
-    gap: 18px;
-}
-
 section{
     padding-bottom: 48px;
 }
@@ -186,7 +188,7 @@ section{
     background-color: rgba(54, 53, 52, 1);
     color: rgba(253, 234, 220, 1);
 
-    padding: 16px 16px 80px 16px;
+    padding: 16px 16px 70px 16px;
 }
 
 #basket.open{
